SERVER-24027 Planner should consider reversing index scan direction in order to obtain a SORT_MERGE plan